--- a/src/main/resources/css/style.css
+++ b/src/main/resources/css/style.css
@@ -3,14 +3,16 @@ graph {
 }
 node {
     size: 65;
-    fill-color: grey;
+    fill-color: #CCCCCC, #AAAAAA;
+    fill-mode: gradient-radial;
     text-offset: 0, 0;
     stroke-mode: plain;
-    stroke-color: darkgrey;
+    stroke-color: #333333;
 }
 node:clicked {
-    fill-color: #2277FF;
-    size: 90;
+    fill-color: #2277FF, #88AAFF;
+    fill-mode: gradient-radial;
+    size: 100;
     text-size:18;
     text-offset: 0, 0;
 }
